# type-speech

./: .gitignore  README.md  build_exe.py  pyproject.toml
app/: tray_app.py
config/: default.yaml  user.yaml
src/type_speech/: config.py  engine.py  logger.py  utils.py
